--- a/articl_list.html
+++ b/articl_list.html
@@ -10,7 +10,7 @@
       content="This site is a test site. I will post new knowledge"
     />
     <link rel="icon" href="images/favicon.png" />
-    <link rel="stylesheet" href="styles/loader.css" />
+    <link rel="stylesheet" href="styles/article.scss" />
     <script src="scripts/vendors/pace.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Kameron:wght@400;700&family=Noto+Sans+JP:wght@500&display=swap"
@@ -18,7 +18,7 @@
     />
     <link rel="stylesheet" href="styles/vendors/bootstrap-reboot.css" />
     <link rel="stylesheet" href="styles/vendors/swiper.min.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/article.css" />
   </head>
   <body>
     <div id="global-container">
@@ -34,8 +34,9 @@
             </div>
             <nav class="header__nav">
               <ul class="header__ul">
-                <li class="header__li item"><a href="#">Service</a></li>
-                <li class="header__li item"><a href="#">Company</a></li>
+                <li class="header__li item"><a href="#">Home</a></li>
+                <li class="header__li item"><a href="#">Article</a></li>
+                <li class="header__li item"><a href="#"></a></li>
                 <li class="header__li item">
                   <a class="btn filled" href="#">Contact</a>
                 </li>
@@ -49,28 +50,6 @@
           </div>
         </header>
         <div id="content">
-          <div class="hero">
-            <div class="swiper-container">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <div class="hero__title">Enjoy Rich</div>
-                  <img src="images/image-1.jpg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <div class="hero__title">Fantastic</div>
-                  <img src="images/image-2.jpg" alt="" />
-                </div>
-                <div class="swiper-slide">
-                  <div class="hero__title">Experience</div>
-                  <img src="images/image-3.jpg" alt="" />
-                </div>
-              </div>
-              <div class="hero__footer">
-                <img class="hero__downarrow" src="images/arrow.svg" />
-                <span class="hero__scrolltext">scroll</span>
-              </div>
-            </div>
-          </div>
           <div id="main-content">
             <aside class="side left">
               <div class="side__inner">
@@ -79,54 +58,31 @@
               </div>
             </aside>
             <main>
-              <section class="travel">
-                <div class="travel__inner">
-                  <div class="travel__img cover-slide">
-                    <img
-                      class="img-zoom"
-                      src="images/image-travel.jpg"
-                      alt=""
-                    />
-                  </div>
-                  <div class="travel__texts appear left">
-                    <div class="travel__texts-inner">
-                      <div class="travel__title main-title item">
-                        <span class="purple">Travel</span>
-                        <span>the world</span>
-                      </div>
-                      <div class="travel__sub sub-title item">
-                        世界中を旅しよう
-                      </div>
-                      <div class="travel__description item">
-                        <p>
-                          <link />Cureativity<link /><br />
-                          <link />Creer<link /><br />
-                          <link />Timing<link /><br />
-                          <a href="Thinking_Map.html">article Thinking Map</a
-                          ><br />
-                          <a
-                            href="https://docs.google.com/spreadsheets/d/1RvWBLGsJdYvU-K9VqcT7XXINt9EnYDxxdraqDAvhJGs/edit#gid=0"
-                            >集計シート</a
-                          >
-                        </p>
-                        <p>あなたの望む宿がきっと見つかります。</p>
-                      </div>
-                      <div class="travel__btn item">
-                        <button class="btn filled">もっと詳しく</button>
-                      </div>
-                    </div>
-                  </div>
+              <section class="menu">
+                <div class="menu_inner">
+                  <nav class="menu_list">
+                    <li class="menu_list item1">
+                      <a class="list1">
+                        <div span="home" href="#">Home</div>
+                      </a>
+                      <a class="list2">
+                        <div span="article" href="#">Article</div>
+                      </a>
+                      <a class="list3">
+                        <div span="home" href="#">Data Analysis</div>
+                      </a>
+                    </li>
+                  </nav>
                 </div>
               </section>
               <section class="houses">
                 <div>
-                  <h2 class="main-title tween-animate-title">
-                    Find Your House
-                  </h2>
+                  <h2 class="main-title tween-animate-title">Find Articles</h2>
                   <p class="sub-title tween-animate-title">
-                    お気に入りの宿泊先を見つけましょう
+                    Let's find your favorite articles!
                   </p>
                 </div>
+                <table></table>
                 <div class="houses__inner">
                   <div class="houses__item">
                     <div class="cover-slide hover-darken">
@@ -135,7 +91,7 @@
                         style="background-image: url(images/villa-1.jpg)"
                       ></div>
                     </div>
-                    <p class="houses__title">House 1</p>
+                    <p class="houses__title">Article 1</p>
                   </div>
                   <div class="houses__item">
                     <div class="cover-slide hover-darken">
@@ -144,7 +100,7 @@
                         style="background-image: url(images/villa-2.jpg)"
                       ></div>
                     </div>
-                    <p class="houses__title">House 2</p>
+                    <p class="houses__title">Article 2</p>
                   </div>
                   <div class="houses__item">
                     <div class="cover-slide hover-darken">
@@ -153,7 +109,7 @@
                         style="background-image: url(images/villa-3.jpg)"
                       ></div>
                     </div>
-                    <p class="houses__title">House 3</p>
+                    <p class="houses__title">Article 3</p>
                   </div>
                   <div class="houses__item">
                     <div class="cover-slide hover-darken">
@@ -162,7 +118,7 @@
                         style="background-image: url(images/villa-4.jpg)"
                       ></div>
                     </div>
-                    <p class="houses__title">House 4</p>
+                    <p class="houses__title">Article 4</p>
                   </div>
                   <div class="houses__item">
                     <div class="cover-slide hover-darken">
@@ -171,7 +127,7 @@
                         style="background-image: url(images/villa-5.jpg)"
                       ></div>
                     </div>
-                    <p class="houses__title">House 5</p>
+                    <p class="houses__title">Article 5</p>
                   </div>
                   <div class="houses__item">
                     <div class="cover-slide hover-darken">
@@ -180,7 +136,7 @@
                         style="background-image: url(images/villa-6.jpg)"
                       ></div>
                     </div>
-                    <p class="houses__title">House 6</p>
+                    <p class="houses__title">Article 6</p>
                   </div>
                   <div class="houses__btn appear up">
                     <button class="btn slide-bg item">もっと詳しく</button>
@@ -219,6 +175,30 @@
                         <img src="images/image-p4.jpg" alt="" />
                       </div>
                       <div class="popular__title">大阪</div>
+                    </div>
+                    <div class="popular__item item">
+                      <div class="popular__img">
+                        <img src="images/image-p4.jpg" alt="" />
+                      </div>
+                      <div class="popular__title">大阪</div>
+                    </div>
+                    <div class="popular__item item">
+                      <div class="popular__img">
+                        <img src="images/image-p1.jpg" alt="" />
+                      </div>
+                      <div class="popular__title">パリ</div>
+                    </div>
+                    <div class="popular__item item">
+                      <div class="popular__img">
+                        <img src="images/image-p2.jpg" alt="" />
+                      </div>
+                      <div class="popular__title">ニューヨーク</div>
+                    </div>
+                    <div class="popular__item item">
+                      <div class="popular__img">
+                        <img src="images/image-p3.jpg" alt="" />
+                      </div>
+                      <div class="popular__title">香港</div>
                     </div>
                     <div class="popular__btn appear up">
                       <button class="btn cover-3d item">
